# ConfigFileParser

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  config.conf  example.cpp
include/: ConfigFileParser.h  reader.h  utils.h
lib/: CMakeLists.txt  parser.cpp  parser.h
lib/utils/: reader.cpp  utils.cpp  utils.h
src/: CMakeLists.txt  ConfigFileParser.cpp
tests/: CMakeLists.txt  test_format.cpp  test_parser.cpp
